# aralar-backend-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_GUIDE.md  FRONTEND_MENU_RENDER_GUIDE.md  MENU_SIMULATION.md  MENU_SIMULATION_ARALAR_ALLERGENS.md  MENU_SIMULATION_DAILY_BASIC.md  MENU_SIMULATION_PHOTO.md  MENU_SIMULATION_SEASONAL.md  MENU_SIMULATION_THREE_SECTIONS.md  Makefile  NOTIFICATIONS_API_GUIDE.md  NOTIFICATIONS_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.minio.yml  docker-compose.yml  docker-start.bat  docker-start.sh  docs_providers_comparison.md  ejemplo_euskera_traduccion.md  ejemplo_glosario_real.md  ejemplos_google_translate.md  pyproject.toml  requirements.txt  test_providers.py  wsgi.py
aralar/: app.py  config.py  extensions.py
aralar/api/: routes.py
aralar/catalog/: role_catalog.py
aralar/core/: loggin.py  security.py  storage.py  validators.py
aralar/docs/: openapi.py
aralar/repositories/: base_repo.py  menu_templates_repo.py  menus_repo.py  notifications_repo.py  roles_repo.py  token_blacklist_repo.py  translations_repo.py  users_repo.py
aralar/schemas/: auth_schemas.py  i18n_schemas.py  menu_availability_schemas.py  menu_schemas.py  menu_template_schemas.py  notification_schemas.py  role_schemas.py  token_blacklist_schemas.py  uploads_schemas.py  user_schemas.py
aralar/services/: auth_service.py  i18n_service.py  menu_templates_service.py  menus_service.py  notifications_service.py  roles_service.py  token_blacklist_service.py  uploads_service.py  users_service.py
docs/: 00_OVERVIEW.md  01_AUTH_USERS.md  02_TEMPLATES.md  03_MENUS.md  04_PUBLIC_RENDER.md  05_NOTIFICATIONS.md  06_SUPPORT_SERVICES.md  07_ER_DIAGRAM.md
scripts/: migrate.py  mongo-init.js  s3_bootstrap.py  seed.py
scripts/migrations/: 0010_create_notifications_collection.py  (+12 more)
tests/: README.md  conftest.py  factories.py  test_auth.py  test_i18n.py  test_menu_templates_endpoints.py  test_menu_templates_service.py  test_menus_endpoints.py  test_menus_service.py  test_notifications.py  test_permissions.py  test_uploads.py  test_users.py
(+12 files in other folders)
