[project]
name = "aralar"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "flask", "flask-jwt-extended", "flask-cors", "flask-limiter", "flask-talisman",
  "pymongo", "marshmallow", "flask-smorest", "python-dotenv",
  "argon2-cffi", "pydantic", "email-validator",
  "gunicorn", "structlog"
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "coverage",
  "pip-tools"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=aralar",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: tests unitarios puros (sin Flask, sin Mongo)",
    "integration: tests que usan mongomock",
    "e2e: tests end-to-end que usan el test_client HTTP",
    "slow: tests que tardan >1s",
]

[tool.coverage.run]
source = ["aralar"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/docs/*",
    "aralar/app.py",
    "aralar/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
